	- We recommend to use the V6 branch on Windows XP
  * BREAKING CHANGE: Removed property TBaseVirtualTree.HintAnimation. Issue #730.
  * BREAKING CHANGE: Renamed unit "VTHeaderPopup" to "VirtualTrees.HeaderPopup"
                     Renamed unit "VTAccessibility" to "VirtualTrees.Accessibility"
					 Renamed unit "VTAccessibilityFactory" to "VirtualTrees.AccessibilityFactory"
  * Fixed issue #736: TVTDragManager.GetDataObject() should not use TVTDataObject in case the OnCreateDataObject event handler returned nil
  * Fixed issue #745: Pressing SPACE should change the check-state of all selected nodes
  * Fixed Issue #369: Centralize Left Content Margin calculation
  * Pull Request #800: Fixed an incorrect calculation of the string edit link height. 
  * Pull request #796: Fixed a bug where hints of type hmTooltip had incorrect (random) position when when HitPosition was not hiOnItemLabel.
  * Fixed issue #796: Utility images are not DPI Scaled
  * Fixed issue #794: ScrollIntoView() by column centers column also when center is false
  * Fixed issue #789: Issues with toHideSelection
  * Fixed issue #792: "Invalid window handle" when using styles
  * Fixed issue #788: Wrong logic in GetEffectiveColor. coStyleColor has been added to DefaultColumnOptions.
  * Fixed issue #783: TVirtualTreeColumns.HandleClick() may trigger sorting twice
  * Fixed issue #781: "~" not working on German keyboard
  * Fixed issue #779: Overlay Images with Index < 15 not drawn when OnGetImageIndexEx is used
  * Fixed issue #777: Margin is applied right of tree lines, but should be applied left of them.
  * Pull request #776: ScrollIntoView centers horizontally enen without Columns defined
  * Fixed issue #764: When toAlwaysSelectNode is on, no node is auto-selected after the tree is cleared.
  * Fixed issue #769: GetImageSize Fails if kind ikState and not assigned(StateImages)
  * Fixed issue #766: Incorrect HotTrack with Touch-Scrolling