@@ -8,6 +8,7 @@
   * BREAKING CHANGE: Renamed unit "VTHeaderPopup" to "VirtualTrees.HeaderPopup"
                      Renamed unit "VTAccessibility" to "VirtualTrees.Accessibility"
 					 Renamed unit "VTAccessibilityFactory" to "VirtualTrees.AccessibilityFactory"
+  * Fixed issue #804: Remove MMXAvailable and related stuff
   * Fixed issue #736: TVTDragManager.GetDataObject() should not use TVTDataObject in case the OnCreateDataObject event handler returned nil
   * Fixed issue #745: Pressing SPACE should change the check-state of all selected nodes
   * Fixed Issue #369: Centralize Left Content Margin calculation
